# slatol_ws

./: .gitignore  README.md
src/slatol_bringup/: package.xml  setup.py
src/slatol_bringup/launch/: slatol.launch.py
src/slatol_bringup/slatol_bringup/: slatol_planner.py
src/slatol_description/: CMakeLists.txt  package.xml
src/slatol_description/urdf/: slatol.urdf.xacro
