<?xml version="1.0"?>
<package format="3">
  <name>slatol_bringup</name>
  <version>0.0.0</version>
  <description>Simulation Launch and Control Node</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>