<?xml version="1.0"?>
<package format="3">
  <name>slatol_description</name>
  <version>0.0.0</version>
  <description>Robot URDF and Configs</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>